--- a/index_gcc.html
+++ b/index_gcc.html
@@ -10,7 +10,7 @@
   <script>
     window.onload = function () {
       // Custom URL scheme
-      var deepLinkAndroid = 'mynissangcc://open';
+      var deepLinkAndroid = 'mynissangcc://';
       var deepLinkiOS = 'mynissangcc://';
  
       // Fallback URLs
