--- a/index_gcc_eur.html
+++ b/index_gcc_eur.html
@@ -10,8 +10,8 @@
   <script>
     window.onload = function () {
       // Custom URL scheme
-      var deepLinkAndroid = 'https://nissanconnectservices/open';
-      var deepLinkiOS = 'mynissangcc://';
+      var deepLinkAndroid = 'nissanconnectservices://';
+      var deepLinkiOS = 'nissanconnectservices://';
  
       // Fallback URLs
       var fallbackAndroid = 'https://play.google.com/store/apps/details?id=eu.nissan.nissanconnect.services'; // replace with your package name
